Updated build file
git-svn-id: http://svn.bigcat.unimaas.nl/pvplugins/chempaint/trunk@884 55a0e026-e783-40ef-8df5-1463b6136d98

--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0"?>
-<project name="ChempaintPlugin" default="jar" basedir=".">
-  
-  <property name="base.name" value="chempaint"/>
+<project name="chempaint" default="jar" basedir=".">
   
   <property name="pathvisio.dir" value="../.."/>
 
-  <property name="plugin.class" value="org.pathvisio.plugins.chempaint.ChemicalStructurePlugin"/>
-  
   	<path id="project.class.path">
 		<fileset dir="${pathvisio.dir}/modules">
 			<include name="org.pathvisio.core.jar"/>
