regular instead of future
git-svn-id: http://svn.bigcat.unimaas.nl/pvplugins/chempaint/trunk@1550 55a0e026-e783-40ef-8df5-1463b6136d98

--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,6 @@
 
 	<!-- Use a future version of plugin-common.xml,
 		Until we have time to update the other plugins -->
-    <import file="${pathvisio.dir}/plugin-common-future.xml" />
+    <import file="${pathvisio.dir}/plugin-common.xml" />
 
 </project>
